Image (de fond) en local...

--- a/_assets/styles/main.css
+++ b/_assets/styles/main.css
@@ -13,7 +13,7 @@ body {
   display: table;
   background-color: #222;
   /* */
-  background-image: url("https://source.unsplash.com/fg_FSTo7ejw/1600x900");
+  background-image: url("./_assets/photo-1520634996521-d0985c84316a.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
